Lab1/hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello
  labels:
    app: nginx-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
        - image: nginx
          imagePullPolicy: Always
          name: svc
          ports:
            - containerPort: 9095
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-hello
  labels:
    app: nginx-hello
spec:
  selector:
    app: nginx-hello
  ports:
    - port: 9095
      name: http
      targetPort: 9095
